// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip[Base] should render correctly  1`] = `
<div>
  <noscript />
  <button
    class="soui-button soui-button-primary soui-button-button"
    dir="ltr"
    type="button"
  >
    <span>
      hover me
    </span>
  </button>
</div>
`;

exports[`Tooltip[Base] should render correctly about click 1`] = `
<div>
  <noscript />
  <button
    class="soui-button soui-button-primary soui-button-button"
    dir="ltr"
    type="button"
  >
    <span>
      click me
    </span>
  </button>
</div>
`;

exports[`Tooltip[Base] should render correctly about disabled 1`] = `
<div>
  <noscript />
  <span
    class="soui-tooltip-target"
    style="cursor: not-allowed;"
  >
    <button
      class="soui-button soui-button-secondary soui-button-button soui-button-disabled"
      dir="ltr"
      disabled=""
      style="pointer-events: none;"
      type="button"
    >
      <span>
        Disabled
      </span>
    </button>
  </span>
</div>
`;
